fix: 툴팁 z-index 수정

--- a/src/app/_component/appliances/ToolTip.module.css
+++ b/src/app/_component/appliances/ToolTip.module.css
@@ -12,7 +12,7 @@
 
   margin-bottom: 1em;
 
-  z-index: 1002;
+  z-index: 10;
 }
 
 .btnContainer {
@@ -50,7 +50,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 1001;
+  z-index: 9;
 
   width: 100%;
   height: 100%;
